# schnorr-secp256K1-haskell

./: CHANGELOG.md  ecrecover.cabal  schnorr-secp256K1-haskell.cabal
app/: Main.hs
src/: Ecrecover.hs  Headers.hs  Implementations.hs  MyLib.hs  SchnorrSecp256K1.hs
src/Ecrecover/: Internal.hs
src/SchnorrSecp256K1/: Internal.hs
