cabal-version:      2.4
name:               ecrecover
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Kowsar Atazadeh
maintainer:         kowsar.atazadeh@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  
        Headers,
        Implementations


    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
        base ^>=4.14.3.0,
        cereal >=0.5.4 && <0.6,
        bytestring >=0.10.8 && <0.12, 
        deepseq >=1.4.2 && <1.5,
        hashable >=1.2.6 && <1.5,
        base16 >=0.3.0.1,
        string-conversions ==0.4.*
        
    hs-source-dirs:   src
    default-language: Haskell2010
    pkgconfig-depends:
      libsecp256k1

executable ecrecover
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
        base ^>=4.14.3.0,
        bytestring >=0.10.8 && <0.12, 
        ecrecover
                    
    hs-source-dirs:   app
    default-language: Haskell2010
