cabal-version:      2.4
name:               schnorr-secp256K1-haskell
version:            0.1.0.0

license:            NONE
author:             Kowsar Atazadeh
maintainer:         kowsar.atazadeh@gmail.com

extra-source-files: CHANGELOG.md

library
    exposed-modules:  
        SchnorrSecp256K1,
        SchnorrSecp256K1.Internal
    build-depends:    
        base ^>=4.14.3.0,
        cereal >=0.5.4 && <0.6,
        bytestring >=0.10.8 && <0.12, 
        deepseq >=1.4.2 && <1.5,
        hashable >=1.2.6 && <1.5,
        base16 >=0.3.0.1,
        string-conversions ==0.4.*,
        binary ==0.8.8.0,
        keccak>=0.2.0
    hs-source-dirs:   src
    default-language: Haskell2010
    pkgconfig-depends:
      libsecp256k1

executable schnorr-secp256K1-haskell
    main-is:          Main.hs
    build-depends:    
        base ^>=4.14.3.0,
        bytestring >=0.10.8 && <0.12, 
        schnorr-secp256K1-haskell
    hs-source-dirs:   app
    default-language: Haskell2010
